# aiida-bader

./: README.md  pyproject.toml  setup.py
.github/config/: code-bader.yaml  setup_config.sh
.github/workflows/: ci.yaml
aiida_bader/aiidalab/: __init__.py  workchain.py
aiida_bader/calculations/: __init__.py
aiida_bader/qeapp/: __init__.py  model.py  resources.py  result.py  setting.py  workchain.py
aiida_bader/qeapp/result/: __init__.py  model.py  panel.py
aiida_bader/workchains/: qe_bader.py
aiida_bader/workchains/protocols/: bader.yaml
aiida_bader/workgraph/: cp2k_bader.py  qe_bader.py
aiida_bader/worktrees/: cp2k_bader.py  qe_bader.py
data/: utils.py
docs/source/: index.rst  installation.rst  qeapp.rst  quick_start.ipynb
examples/: bader-localhost.yaml  qe_bader_workchain.py
src/aiida_bader/: __main__.py  utils.py
src/aiida_bader/calculations/: __init__.py
src/aiida_bader/parsers/: __init__.py
src/aiida_bader/qeapp/: __init__.py  model.py  resources.py  setting.py  workchain.py
src/aiida_bader/qeapp/guides/: 0_Basic tutorial.html  0_bader.html
src/aiida_bader/qeapp/result/: model.py  panel.py
src/aiida_bader/qeapp/structure_examples/: PtO.cif  PtO2.cif  __init__.py
src/aiida_bader/workchains/: __init__.py  qe_bader.py
src/aiida_bader/workchains/protocols/: bader.yaml
src/aiida_bader/workgraph/: qe_bader.py
tests/: test_bader.py
